# SDMC

./: ARTIFACT_MANIFEST.md  LICENSE_PLACEHOLDER.txt  README_ARTIFACT.md  requirements.txt
sdmc_code/: README.md  pyproject.toml
sdmc_code/configs/: README_CONFIGS.md  sdmc_deepseek_full.yaml  sdmc_deepseek_hdc.yaml  sdmc_deepseek_v4_flash.yaml  sdmc_deepseek_v4_flash_verified.yaml  sdmc_deepseek_v4pro_verified.yaml  sdmc_default.yaml  sdmc_gemma4_local_verified.yaml  sdmc_gemma4_server1_18114.json  sdmc_gemma4_server1_18115.json  sdmc_gemma4_server1_18115.yaml
sdmc_code/results_curated/: current_tables_20260609_1837.md
sdmc_code/scripts/: audit_spider_hardness_table.py  auto_server1_deepseek_main.sh  benchmark_rq3_context_generation_speed.py  benchmark_store_graph_cost.py  build_final_results_docx.py  curate_rq_metrics.py  evaluate_baseline_predictions.py  experiment_guardian_server1.sh  export_schema_to_tisql_hdc.py  export_sdmc_store_to_tisql_hdc.py  import_tiinsight_hdc_json.py  monitor_server1_gemma3_bird_full.sh  monitor_server1_rq_pipeline.sh  prepare_baseline_smoke_data.py  prepare_dail_smoke_questions.py  prepare_rq3_macsql_spider_inputs.py  repair_tisql_predictions_jsonl.py  rq3_bird_guardian_server1.sh  rq3_spider_llm_queue_server1.sh  run_local_model_calibration.py  run_rq2_gemma4.sh  run_rq2_gemma4_server1.sh  run_rq4_gemma4.sh  run_rq4_gemma4_server1.sh  run_rq_queue_server1.sh  run_sensitivity_budget_server1.sh  run_sensitivity_singlevar_server1.sh  run_stage_a_full.sh  run_stage_a_full_v2.sh  targeted_rebuild_failed_dbs.py
sdmc_code/src/sdmc/: cli.py  (+15 more)
(+31 files in other folders)
