[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sdmc"
version = "0.1.0"
description = "SQL-Derived Multi-level Context for Reliable Text-to-SQL"
requires-python = ">=3.10"

[project.scripts]
sdmc = "sdmc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
